--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "buefy": "^0.9.4",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "ky": "^0.25.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
