--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "buefy": "^0.9.4",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "dayjs": "^1.9.7",
     "ky": "^0.25.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
