--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "dayjs": "^1.9.7",
+    "firebase": "^8.1.2",
     "ky": "^0.25.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
